--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,422 +1,262 @@
-# Chinese (China) translations for Ruby on Rails 
-# by tsechingho (http://github.com/tsechingho)
-
 "zh-CN":
-  welcome:
-    there_are_no_users: "还没有任何用户，请添加一个用户."
-    remember_admin_location: "请记住你的管理员权限:"
-    lets_start: "首先注册一个账户，以登录的网站后台..."
-    continue: "继续..."
-  admin:
-    menu:
-      reorder_menu: "重新排序"
-      reorder_menu_done: "排序完毕"
-    dialogs:
-      show:
-        save: '保存'
-        cancel: '取消'
-  refinery:
-    other: "其他 %{what}"
-    reorder: "排序 %{what}"
-    reorder_done: "完成排序：%{what}"
-    crudify:
-      created: "%{what} 已成功添加."
-      updated: "%{what} 已成功更新."
-      destroyed: "%{what} 已成功删除."
-  shared:
-    site_bar:
-      log_out: "退出"
-      switch_to_your_website: "切换到网站前台"
-      switch_to_your_website_editor: "切换到网站后台"
-    admin:
-      error_messages:
-        problems_in_following_fields: '以下项目出现错误，请检查'
-      continue_editing:
-        save_and_continue_editing: "保存并继续修改"
-      form_actions:
-        or: "或"
-        save: "保存"
-        or_cancel: "或"
-        cancel: "取消"
-        or_continue: "或"
-        cancel_lose_changes: "取消后将会丢失所有改变的内容，你希望  %{object_name} 吗？"
-        delete: "删除"
-        previous: "上一页"
-        next: "下一页"
-        close: "关闭"
-      image_picker:
-        none_selected: "现在还没有任何选择的 %{what}, 请点击这里添加."
-        remove_current: "删除 %{what}"
-        change: "点击这里添加图片"
-        image: "图片"
-        show: "显示"
-      resource_picker:
-        download_current: '下载当前文件'
-        opens_in_new_window: '在新窗口中打开'
-        remove_current: "删除当前文件"
-        no_resource_selected: "现在还没有任何选择的 %{what}, 请点击这里添加."
-        name: '添加文件'
-        current: '当前文件'
-      search:
-        button_text: "搜索"
-        results_for: "搜索内容： '%{query}'"
-        no_results: "没有找到任何结果"
-      delete:
-        message: "确认要删除'%{title}'?"
-        title: "彻底删除 %{object_name}"
-      edit:
-        title: "编辑 %{object_name}"
-    message:
-      close: "关闭"
-      close_this_message: "关闭该信息"
-    draft_page_message:
-      not_live: '该页'
-    footer:
-      copyright: "版权所有&copy;"
-
-  plugins:
-    refinery_dashboard:
-      title: "控制面板"
-  admin:
-    dashboard:
+  activerecord: 
+    attributes: 
+      news_item: 
+        body:  '内容'
+        publish_date:  '发布日期'
+        title:  '标题'
+      refinery_setting: 
+        name:  '名称'
+        restricted:  '权限受限'
+        value:  '值'
+    models: 
+      image:  '图片'
+      inquiry:  '表单'
+      news_item:  '新闻'
+      page:  '网页'
+      refinery_setting:  '设置'
+      resource:  '资源'
+    
+    blog: 
+      categories: 
+        category: 
+          delete:  '删除分类'
+          edit:  '修改分类'
+        index: 
+          no_items_yet:  '还没有分类. 请点击 "{{create}}" 创建.'
+      comments: 
+        approved:  '评论来自： "{{author}}" ，已审核通过.'
+        comment: 
+          approve:  '核准该评论'
+          read:  '查看评论'
+          reject:  '拒收该评论'
+          view_live:  '查看评论 <br/><em>(在新窗口中打开)</em>'
+        index: 
+          no_items_yet:  '{{type}}还没有添加任何评论.'
+        rejected:  '评论来自："{{author}}" 已被拒绝.'
+        show: 
+          actions:  '活动情况'
+          age:  '之前'
+          approve:  '核准该评论'
+          back:  '返回'
+          blog_post:  '文章'
+          comment:  '评论'
+          date:  '添加日期：'
+          details:  '详细'
+          from:  '作者：'
+          message:  '评论'
+          reject:  '拒收该评论'
+      posts: 
+        form: 
+          advanced_options:  '高级选项'
+          published_at:  '发布日期'
+          save_as_draft:  '保存为草稿'
+          toggle_advanced_options:  '点击设置网页meta标签和文章选项'
+        index: 
+          no_items_yet:  '还没有任何文章. 请点击 "{{create}}" .'
+        post: 
+          delete:  '删除'
+          edit:  '修改'
+          view_live:  '在线查看 <br/><em>(在新窗口中打开)</em>'
+      settings: 
+        notification_recipients: 
+          example:  '填入接收者邮件(可以是多个) 如: jack@inruby.com, jill@inruby.com'
+        notification_recipients: 
+          explanation:  '当有用户给文章添加评论的时候, 程序会自动通知邮件接收者.'
+        notification_recipients: 
+          hint:  '当有用户给文章添加评论的时候, 程序会自动通知邮件接收者.'
+        notification_recipients: 
+          updated:  '邮件提醒已提交到 "{{recipients}}"'
+        notification_recipients: 
+          value:  '发送提醒到'
+      submenu: 
+        categories: 
+          manage:  '管理'
+          new:  '创建新分类'
+          title:  '分类'
+        comments: 
+          approved:  '已审核'
+          new:  '新'
+          rejected:  '已拒绝'
+          title:  '评论'
+          title_with_count:  '新评论 ({{new_count}})'
+          unmoderated:  '新'
+        posts: 
+          manage:  '管理文章'
+          new:  '添加新文章'
+          title:  '文章'
+        settings: 
+          moderation:  '评分审核'
+          title:  '设置'
+          update_notified:  '修改提醒用户'
+    dashboard: 
+      index: 
+        add_a_new_page:  '增加新页'
+        change_language:  '选择语言'
+        quick_tasks:  '快速任务'
+        see_home_page:  '显示主页'
+        update_a_page:  '添加新页面'
+        upload_a_file:  '上传文件'
+        upload_a_image:  '上传图片'
+      recent_activity: 
+        latest_activity:  '最近日志'
+        latest_activity_message:  '%{what} %{kind} %{action}'
+      recent_inquiries: 
+        latest_inquiries:  '最近留言'
+    images:
+      delete:  '彻底删除'
+      edit:  '修改'
+      existing_image: 
+        button_text:  '插入'
+        resize_image:  '要更改图片的大小吗'
+        size:  '大小'
+      form: 
+        current_image:  '当前图片'
+        image:  '图像'
+        maximum_image_size:  '图片的大小最大允许为 %{megabytes}MB'
+        or:  '或'
+        replace_image:  '替换为这幅图片...'
+        use_current_image:  '使用当前图片'
+      grid_view: 
+        view_live:  '预览图片<br/><em>在新窗口中打开</em>'
+        create_new_image:  '添加新图像'
       index:
-        quick_tasks: "快速任务"
-        add_a_new_page: "增加新页"
-        update_a_page: "添加新页面"
-        upload_a_image: "上传图片"
-        upload_a_file: "上传文件"
-        change_language: "选择语言"
-        see_home_page: "显示主页"
-      recent_activity:
-        latest_activity: "最近日志"
-        latest_activity_message: %{what} %{kind} %{action}
-      recent_inquiries:
-        latest_inquiries: "最近留言"
-  updated:
-    'with_article "the"': "已更新"
-  created:
-    'with_article "the"': "已添加"
-
-  plugins:
-    refinerycms_blog:
-      title: "页面"
-  admin:
-    blog:
-      categories:
-        category:
-          edit: "修改分类"
-          delete: "删除分类"
-        index:
-          no_items_yet: '还没有分类. 请点击 "{{create}}" 创建.'
-      comments:
-        approved: '评论来自： "{{author}}" ，已审核通过.'
-        comment:
-          view_live: '查看评论 <br/><em>(在新窗口中打开)</em>'
-          read: '查看评论'
-          reject: '拒收该评论'
-          approve: '核准该评论'
-        rejected: '评论来自："{{author}}" 已被拒绝.'
-        index:
-          no_items_yet: '{{type}}还没有添加任何评论.'
-        show:
-          comment: '评论'
-          blog_post: '文章'
-          from: '作者：'
-          date: '添加日期：'
-          message: '评论'
-          details: '详细'
-          age: '之前'
-          actions: '活动情况'
-          back: '返回'
-          reject: '拒收该评论'
-          approve: '核准该评论'
-      posts:
-        form:
-          advanced_options: '高级选项'
-          toggle_advanced_options: '点击设置网页meta标签和文章选项'
-          save_as_draft: '保存为草稿'
-          published_at: '发布日期'
-        index:
-          no_items_yet: '还没有任何文章. 请点击 "{{create}}" .'
-        post:
-          view_live: "在线查看 <br/><em>(在新窗口中打开)</em>"
-          edit: '修改'
-          delete: '删除'
-      settings:
-        notification_recipients:
-          value: '发送提醒到'
-          explanation: '当有用户给文章添加评论的时候, 程序会自动通知邮件接收者.'
-          hint: '当有用户给文章添加评论的时候, 程序会自动通知邮件接收者.'
-          example: "填入接收者邮件(可以是多个) 如: jack@inruby.com, jill@inruby.com"
-          updated: '邮件提醒已提交到 "{{recipients}}"'
-      submenu:
-        categories:
-          title: '分类'
-          manage: '管理'
-          new: '创建新分类'
-        comments:
-          title: '评论'
-          title_with_count: '新评论 ({{new_count}})'
-          new: '新'
-          unmoderated: '新'
-          approved: '已审核'
-          rejected: '已拒绝'
-        posts:
-          title: '文章'
-          manage: '管理文章'
-          new: '添加新文章'
-        settings:
-          title: '设置'
-          moderation: '评分审核'
-          update_notified: '修改提醒用户'
-  blog:
-    comment_mailer:
-      notification:
-        greeting: '你好'
-        you_recieved_new_comment: '你的网站刚收到一封新评论'
-        comment_starts: --- comment starts ---
-        comment_ends: --- comment ends ---
-        from: '来自'
-        email: '邮箱'
-        message: '信息'
-        closing_line: '亲切的问候'
-        ps: P.S. All your comments are stored in the "Blog" section of Refinery under the "Comments" submenu should you ever want to view it later there.
-    shared:
-      categories:
-        title: '分类'
-      rss_feed:
-        title: RSS Feed
-      posts:
-        other: '其它文章'
-        created_at: '添加时间： {{when}}'
-        read_more: '更多>>'
-      comments:
-        singular: '评论'
-        none: '还没有评论'
-    categories:
-      show:
-        no_posts: '还没有任何文章'
-    posts:
-      comment: '评论'
-      comments:
-        by: '作者： {{who}}'
-        time_ago: '{{time}} 前'
-        thank_you: '感谢您的评价.'
-        thank_you_moderated: '谢谢您的评价. 你的信息已经添加到消息队列，稍后将会显示在页面.'
-      show:
-        comments:
-          title: '评论'
-          add: '发表评论'
-        other: '其它文章'
-        filed_in: '归档'
-        submit: '发送'
-
-  plugins:
-    refinery_users:
-      title: '用户'
-  admin:
-    users:
-      delete: '彻底删除该用户'
-      edit: '修改'
-      update:
-        cannot_remove_user_plugin_from_current_user: "你不能删除用户插件"
-      form:
-        blank_password_keeps_current: "留空白表示保留当前密码"
-        enable_all: "使所有生效"
-      index:
-        create_new_user: "添加新用户"
-        no_users_yet:  '还没有新用户，点击 "添加新用户" 添加'
-      user:
-        confirm_delete_message: "你确定要删除 '%{who}'?"
-        confirm_delete_title: "彻底删除该用户"
-        edit_user: "编辑"
-        email_user: "发邮件"
-        preview: "(%{who}) 于 %{created_at} 添加成功"
-  sessions:
-    login_successful: "登录成功"
-    login_failed: "对不起，用户名或密码错误，请检查"
-    logged_out: "退出成功"
-    new:
-      hello_please_sign_in: "你好! 请登录."
-      sign_in: "登录"
-      forgot_password: "忘记密码了？"
-  users:
-    setup_website_name: "首先，请给网站取个名字. <a href='%{link}' name='%{title}'>点击这里</a> 修改网站名字"
-    signup_disabled: "用户注册被禁用"
-    new:
-      fill_form: "请填写以下内容"
-      sign_up: "注册"
-    create:
-      welcome: "欢迎光临, %{who}"
-      signup_complete: "注册成功！"
-    forgot:
-      email_address: "邮箱地址"
-      enter_email_address: "请填写账号的邮箱地址"
-      reset_password: "重置密码"
-      blank_email: "邮箱必填"
-      email_not_associated_with_account: "对不起, '%{email}'关联不到任何帐户.<br/>请确定你输入的邮件地址是否正确?"
-      email_reset_sent: "邮件已经发送到你邮箱，通过邮件内容链接可以修改密码"
-    reset:
-      code_invalid: "对不起，链接已经过期. 请重新操作."
-      successful: "恭喜你，%{email}的密码更新成功"
-      pick_new_password_for: "给%{email}设置一个新邮件"
-      reset_password: "设置新密码"
-      password_blank: "重新输入相同的密码"
-  user_mailer:
-    please_activate: "请激活你的新帐户"
-    activated: "你的帐户已成功激活"
-    activated_email: "%{who}, 你的帐户已成功激活. 现在你可以添加新的插件了："
-    account_created: "你的帐户已成功创建"
-    user_name: "用户名： %{name}"
-    password: "密码：%{password}"
-    visit_url: "通过此链接激活你的帐户:"
-    link_to_reset_your_password: "通过此链接重置密码"
-  authlogic:
-    error_messages:
-      login_blank: "不能为空"
-      login_not_found: "没有找到该账号，请确认"
-      login_invalid: "只能是字母、数字、空格和 .-_@ "
-      consecutive_failed_logins_limit_exceeded: "帐户登录次数过多，已超过登录限制"
-      email_invalid: "请输入正确的邮箱地址"
-      password_blank: "不能为空"
-      password_invalid: "不是有效的"
-      not_active: "你的帐户没有激活"
-      not_confirmed: "你的帐户还没有确认"
-      not_approved: "你的帐户还没有审核通过"
-      no_authentication_details: "没有提供任何身份认证信息"
-    models:
-      user_session: "用户会话"
-    attributes:
-      user_session:
-        login: "登录"
-        email: "邮箱"
-        password: "密码"
-        remember_me: "记住登录状态"
-        incorrect: "对不起 %{login_field} 或密码不正确."
-  date:
-    formats:
-      default: "%Y-%m-%d"
-      short: "%b%d日"
-      long: "%Y年%b%d日"
-    day_names: [星期日, 星期一, 星期二, 星期三, 星期四, 星期五, 星期六]
-    abbr_day_names: [日, 一, 二, 三, 四, 五, 六]
-    month_names: [~, 一月, 二月, 三月, 四月, 五月, 六月, 七月, 八月, 九月, 十月, 十一月, 十二月]
-    abbr_month_names: [~, 1月, 2月, 3月, 4月, 5月, 6月, 7月, 8月, 9月, 10月, 11月, 12月]
-    order: [ :year, :month, :day ]
-  
-  time:
-    formats:
-      default: "%Y年%b%d日 %A %H:%M:%S %Z"
-      short: "%b%d日 %H:%M"
-      long: "%Y年%b%d日 %H:%M"
-    am: "上午"
-    pm: "下午"
-  
-  datetime:
-    distance_in_words:
-      half_a_minute: "半分钟"
-      less_than_x_seconds:
-        one: "不到一秒"
-        other: "不到 %{count} 秒"
-      x_seconds:
-        one: "一秒"
-        other: "%{count} 秒"
-      less_than_x_minutes:
-        one: "不到一分钟"
-        other: "不到 %{count} 分钟"
-      x_minutes:
-        one: "一分钟"
-        other: "%{count} 分钟"
-      about_x_hours:
-        one: "大约一小时"
-        other: "大约 %{count} 小时"
-      x_days:
-        one: "一天"
-        other: "%{count} 天"
-      about_x_months:
-        one: "大约一个月"
-        other: "大约 %{count} 个月"
-      x_months:
-        one: "一个月"
-        other: "%{count} 个月"
-      about_x_years:
-        one: "大约一年"
-        other: "大约 %{count} 年"
-      over_x_years:
-        one: "一年多"
-        other: "%{count} 年多"
-    prompts:
-      year:   "年"
-      month:  "月"
-      day:    "日"
-      hour:   "时"
-      minute: "分"
-      second: "秒"
-  
-  number:
-    format:
-      separator: "."
-      delimiter: ","
-      precision: 3
-    currency:
-      format:
-        format: "%u %n"
-        unit: "CN¥"
-        separator: "."
-        delimiter: ","
-        precision: 2
-    percentage:
-      format:
-        delimiter: ""
-    precision:
-      format:
-        delimiter: ""
-    human:
-      format:
-        delimiter: ""
-        precision: 1
-      storage_units:
-        format: "%n %u"
-        units:
-          byte:
-            one: "Byte"
-            other: "Bytes"
-          kb: "KB"
-          mb: "MB"
-          gb: "GB"
-          tb: "TB"
-  
-  support:
-    array:
-      words_connector: ", "
-      two_words_connector: " 和 "
-      last_word_connector: ", 和 "
-  
-  activerecord:
-    errors:
-      template:
-        header: 
-          one: "有 1 个错误发生导致「%{model}」无法被保存。"
-          other: "有 %{count} 个错误发生导致「%{model}」无法被保存。"
-        body: "如下字段出现错误："
-      messages:
-        record_invalid: "校验失败: %{errors}"
-        inclusion: "不包含于列表中"
-        exclusion: "是保留关键字"
-        invalid: "是无效的"
-        confirmation: "与确认值不匹配"
-        accepted: "必须是可被接受的"
-        empty: "不能留空"
-        blank: "不能为空字符"
-        too_long: "过长（最长为 %{count} 个字符）"
-        too_short: "过短（最短为 %{count} 个字符）"
-        wrong_length: "长度非法（必须为 %{count} 个字符）"
-        taken: "已经被使用"
-        not_a_number: "不是数字"
-        greater_than: "必须大于 %{count}"
-        greater_than_or_equal_to: "必须大于或等于 %{count}"
-        equal_to: "必须等于 %{count}"
-        less_than: "必须小于 %{count}"
-        less_than_or_equal_to: "必须小于或等于 %{count}"
-        odd: "必须为单数"
-        even: "必须为双数"
+        no_images_yet:  '还没有任何图像，点击"添加"上传第一幅图片'
+      insert: 
+        existing_image:  '图片已经存在'
+        new_image:  '新图片'
+    inquiries: 
+      delete:  '删除'
+      index: 
+        no_inquiries:  '还没有任何内容'
+      inquiry: 
+        mark_as_ham:  '移动到收件箱'
+        mark_as_spam:  '移至垃圾邮箱'
+        read_inquiry:  '读取'
+        said:  '说：'
+      show: 
+        actions:  '活动情况'
+        age:  '时间'
+        back_to_all_inquiries:  '返回'
+        click_to_email:  '点击发送邮件'
+        date:  '日期'
+        details:  '详细'
+        from:  '来自'
+        inquiry:  '留言'
+        message:  '信息'
+        phone:  '电话'
+        spam:  '垃圾邮件'
+        spam_yes:  '是'
+        to:  '送至'
+      spam: 
+        no_spam:  '万岁！您没有任何垃圾邮件'
+      submenu: 
+        edit_confirmation_email:  '设置确认邮箱'
+        inbox:  '收件箱'
+        spam:  '垃圾箱'
+        update_notified:  '设置更新通知'
+    inquiry_settings: 
+      confirmation_email_form: 
+        below_edit_email_sent:  '您可以修改以下发送内容'
+        click_to_edit_subject:  '修改主题'
+        explanation:  '当网站接收到留言信息后，程序会自动向留言者邮箱回复一封邮件'
+        from:  '来自'
+        message:  '内容'
+        note:  '注意: 请将内容中的 %name% 替换为客户的名字'
+        subject:  '主题'
+        the_customer_making_inquiry:  '对方邮箱'
+        to:  '送至'
+      notification_recipients_form:
+        example:  '请正确填写邮箱地址，如: master@inruby.com'
+        explanation:  '当网站接收到留言信息后，程序会自动向该邮箱发送一封提醒邮件'
+        hint:  '当网站接收到留言信息后，程序会自动向该邮箱发送一封提醒邮件'
+        inquiry_settings_value_name:  '填写留言提醒邮箱'
+      update: 
+        updated:  '"%{setting}" 设置成功.'
+    menu: 
+      reorder_menu:  '重新排序'
+      reorder_menu_done:  '排序完毕'
+    news_items: 
+      index: 
+        actions:  '操作'
+        create:  '添加新闻'
+        news_item:  '新闻'
+        no_items:  '还没有任何内容.'
+        no_items_yet:  '还没有任何内容. 点击 "添加新项".'
+      news_item: 
+        delete:  '彻底删除'
+        edit:  '编辑'
+        published:  '发布'
+        view_live_html:  '在线预览 <br/><em>(在新窗口中打开)</em>'
+    pages: 
+      delete:  '删除'
+      edit:  '编辑'
+      form_advanced_options: 
+        advanced_options:  '高级选项'
+        custom_title:  '定制标题'
+        custom_title_help:  '如果你希望该网页根显示在导航中的菜单有个不同的标题，则选择&apos;Text&apos;，输入的标题名称'
+        link_url:  '链接本网页到其他网站或网页'
+        link_url_help:  '如果你在导航中点击该网页后希望定向到其他链接，则输入网页网址，如：http://www.inruby.com 否则不用填写任何内容'
+        page_options:  '页面高级选项'
+        parent_page:  '父级网页'
+        parent_page_help:  '你可以通过列表选择，将一个网页放到其他网页的下方，如果你希望该页作为父级网页，则不用填写任何内容'
+        save_as_draft:  '存为草稿'
+        show_in_menu_description:  '将此标题显示在网站的导航栏中'
+        show_in_menu_help:  '如果你想在网站导航中删除该页，则不选此项。如果你需要链接本网页，但是又不想显示在菜单网页。'
+        show_in_menu_title:  '显示在导航中'
+        skip_to_first_child:  '跳过上一级网页'
+        skip_to_first_child_help:  '该选项使本网页链接到第一网页的下面，这对组织网页很有用'
+        skip_to_first_child_label:  '将用户访问重定向到下一级网页'
+        title_types: 
+          none:  '无内容'
+        title_types: 
+          text:  '文本内容'
+        toggle_advanced_options:  'SEO优化选项'
+      form_advanced_options_seo: 
+        meta_description_help:  '输入两个或三个句子简洁的描述该网页'
+        meta_description_title:  'Meta描述'
+        meta_keywords_help:  '输入5-10个关键词，以关联该网页内容，关键词以逗号隔开（英文逗号）'
+        meta_keywords_title:  'Meta关键词'
+        seo:  '搜索引擎优化'
+        seo_override_title:  '浏览器标题'
+        seo_override_title_help:  '输入5-10个关键词，以描述网页的主体内容'
+      form_new_page_parts: 
+        title:  '标题'
+      form_page_parts: 
+        create_content_section:  '添加内容'
+        delete_content_section:  '删除内容'
+      index: 
+        create_new_page:  '创建新网页'
+        no_pages_yet:  '还没有任何网页，单击 "创建新网页" '
+        reorder_pages:   '网页重新排序'
+        reorder_pages_done:  '完成排序'
+      page: 
+        draft:  '草稿'
+        hidden:  '隐藏'
+        view_live:  '在线预览<br/><em>(新窗口中打开)</em>'
+    pages_dialogs: 
+      link_to: 
+        email_address: 
+          body_optional:  '可选择内容'
+          not_sure:  '不知道在这里放什么吗？'
+          step1:  '填写或复制邮件地址到<strong>邮件地址</strong>文本框中'
+          step2:  '填写<strong>标题栏</strong>文本框，如果你希望显示在<strong>预显示标题栏</strong>.'
+          step3:  '填写<strong>邮件内容</strong>文本框，如果你希望显示在<strong>预显示信息</strong>.'
+          subject_line_optional:  '可选择科目'
+          tab_name:  '邮件地址'
+        insert:  '插入'
+        web_address: 
+          location:  '位置'
+          new_window:  '新窗口'
+          new_window_label:  '在新窗口中打开此链接'
+          not_sure:  '不知道在这里放什么吗？'
+          step1:  '找到你需要连接的网页'
+          step2:  '复制该网页地址，然后粘贴到上面的框里'
+          tab_name:  '网站'
+        your_page: 
+          tab_name:  '你所在网页'
+        your_resource: 
+          link_to_this_resource:  '链接到文件'
+          tab_name:  '你的文件'
+      page_link: 
+        link_to_this_page:  '链接到网页'
